feat: criado leitura de usuario
